--- a/src/style.css
+++ b/src/style.css
@@ -1,6 +1,7 @@
 .userCardContainer {
     display: flex;
     flex-wrap: wrap;
+    justify-content: center;
     color: rgb(17, 19, 19);
 }
 
@@ -9,7 +10,7 @@
     margin: 20px 20px 20px 20px;
     padding: 20px 20px 20px 20px;
     text-align: center;
-    width: 27.3%;
+    width: 20%;
     border-radius: 50px;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.1), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
